--- a/php/php-fpm.conf
+++ b/php/php-fpm.conf
@@ -5,3 +5,6 @@ pm.start_servers = 3
 pm.min_spare_servers = 2
 pm.max_spare_servers = 4
 pm.max_requests = 200
+
+slowlog = /dev/stdout
+request_slowlog_timeout = 3s
